# pico-sstc-interrupter

./: .gitignore  README.md  platformio.ini
include/: tusb_config.h
src/: CMakeLists.txt  main.c  usb_descriptors.c
